[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surf-sense"
version = "0.1.0"
description = "Lightweight toolkit for local conversational inference using small instruction models"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Joshua Wehr" } ]

dependencies = [
    "transformers>=4.30",
    "torch>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

keywords = ["nlp", "transformers", "llm", "chatbot"]

[project.license]
text = "MIT"
